# nrf24l01_stm_linux_project

./: README.md
Nrf24l01/: .mxproject  CMakeCache.txt  CMakeLists.txt  CMakeListsbk.txt  Makefile  Nrf24l01.ioc  STM32F103R6Hx_FLASH.ld  cmake_install.cmake  gcc-arm-none-eabi.cmake  source.cmake
Nrf24l01/Cmake_MCU_Proj/Cmake_MCU_Project/: CMakeLists.txt  compile.cmake  config.cmake  link.cmake  source.cmake  toolchain-arm-none-eabi.cmake
Nrf24l01/Cmake_MCU_Proj/Cmake_MCU_Project/vscode_project_Setting/: launch.json  tasks.json
Nrf24l01/Core/: main.c  main.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f1xx_it.h
fake_hw_ieee802154/: .vscode-ctags
nrf24_linux_driver/: .vscode-ctags
nrf24_receive/: .cproject  .project  nrf24_receive.ioc  nrf24_receive.launch
nrf24_receive/Core/: .vscode-ctags
nrf24_receive/Core/Inc/: stm32f1xx_it.h
nrf24_receive/Core/Src/: main.c  stm32f1xx_hal_msp.c
nrf24_receive/Core/nrf24_hal/: .vscode-ctags  nrf24_hal.c  nrf24_hal.h
nrf24_receive/Core/nrf24_service/: .vscode-ctags  nrf24_reg_def.h  nrf24_service.c  nrf24_service.h
nrf24_receive/Debug/: makefile  nrf24_receive.list  objects.list  sources.mk
nrf24_receive/Debug/Core/Src/: subdir.mk
nrf24_receive/Debug/Core/nrf24_hal/: subdir.mk
nrf24_receive/Debug/Core/nrf24_service/: subdir.mk
nrf24_receive/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: subdir.mk
nrf24_receive/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal.h
nrf24_transmit/: .cproject  .mxproject  .project  nrf24_transmit (1).launch  nrf24_transmit.launch
nrf24_transmit/Core/Inc/: main.h
nrf24_transmit/Core/Src/: main.c  stm32f1xx_it.c
nrf24_transmit/Core/nrf24_hal/: nrf24_hal.c  nrf24_hal.h
nrf24_transmit/Core/nrf24_service/: nrf24_service.c  nrf24_service.h
nrf24_transmit/Debug/: makefile  nrf24_transmit.list
nrf24_transmit/Debug/Core/Src/: subdir.mk
nrf24_transmit/Debug/Core/nrf24_hal/: subdir.mk
nrf24_transmit/Debug/Core/nrf24_service/: subdir.mk
nrf24_transmit/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: subdir.mk
nrf24l01/: .vscode-ctags  Kbuild  Makefile  README  mod-nrf24l01.bb  nrf24l01.dts  nrf24l01_functions.c  nrf24l01_sysfs.h  nrf24l01_worker.c  nrf24l01_worker.h
nrf24l01/files/: Makefile  README.md  bcm2709-rpi-2-b.dts  insmod.sh  nrf24l01_chrdev.c  nrf24l01_core.c  nrf24l01_core.h  nrf24l01_netdev.c  nrf24l01_netdev.h  nrf24l01_reg.c  nrf24l01_sysfs.c
test_character_dev/: Makefile  nrf24_sysfs.c  nrf24_sysfs.h  test_dev.c
